--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # dependencies
 /node_modules
 backend/node_modules
-backend/flaskbackend/venv
+flaskbackend/venv
 backend/flaskbackend/venv
 /.pnp
 .pnp.*
