--- a/flaskbackend/requirements.txt
+++ b/flaskbackend/requirements.txt
@@ -2,10 +2,11 @@ langchain
 langchain-community
 sentence-transformers
 transformers
-torch==2.7.0 --index-url https://download.pytorch.org/whl/cpu
+# torch==2.7.0 --index-url https://download.pytorch.org/whl/cpu
 keras
 tf-keras
 beautifulsoup4
 pdfplumber
 flask
 google-generativeai
+faiss-cpu
